# verovio

./: .gitignore  CHANGELOG.md  Package.swift  README.md  Verovio.podspec  codemeta.json  pyproject.toml  setup.py
.github/workflows/: ci_build.yml  clang-format-check.yml  python-ci-wheel.yml  tests_build.yml
Verovio.xcodeproj/: project.pbxproj
bindings/go/: README.md  go.mod  verovio.go  verovio_test.go
bindings/iOS/: all.h
bindings/java/: build.sh  pom.xml
bindings/python/: .pypi-version
cmake/: CMakeLists.txt  verovio.pc.in
data/: Bravura.css  Bravura.xml  Gootville.css  Gootville.xml  Leipzig.css  Leipzig.xml  Leland.css  Leland.xml  Petaluma.css  Petaluma.xml  tuning-glyphnames.json
data/Bravura/: E9D0.xml  E9D1.xml  E9D8.xml  EA29.xml
data/Gootville/: E003.xml  E004.xml  E06E.xml  E08C.xml  E08D.xml  E094.xml  E095.xml  E4D2.xml  E4D3.xml  E4D5.xml  E51A.xml  E51B.xml  E59D.xml  E632.xml
data/Leipzig/: E056.xml  E9D0.xml  E9D1.xml  E9D8.xml  EA29.xml
data/Leland/: E000.xml  E047.xml  E04A.xml  E04B.xml  E050.xml  E051.xml  E052.xml  E053.xml  E054.xml  E055.xml  E05C.xml  E05D.xml  E062.xml  E063.xml  E064.xml  E065.xml  E066.xml  E06A.xml  E06D.xml  E06E.xml  E07A.xml  E07B.xml  E07C.xml  E083.xml  E084.xml  E085.xml  E086.xml  E087.xml  E088.xml  E089.xml  E08A.xml  E08B.xml  E0A0.xml  E0A2.xml  E0A3.xml  E0AF.xml  E0B3.xml  E0B8.xml  E0CF.xml  E0D0.xml  (+225 more)
doc/: python-smoke-test.py  test-suite-diff.py  test-suite-roundtrip.py  test-suite.py
emscripten/: buildToolkit
emscripten/npm/: README.md  package.json
fonts/: generate.py  pyproject.toml  supported.xml
fonts/Leipzig/: Leipzig.sfd  leipzig_metadata.json
include/hum/: humlib.h
include/tuning-library/: README.md  TuningsImpl.h
include/vrv/: beamspan.h  boundingbox.h  calcchordnoteheadsfunctor.h  comparison.h  customtuning.h  custos.h  devicecontext.h  dir.h  doc.h  editortoolkit.h  editortoolkit_neume.h  editortoolkit_shared.h  episema.h  iogabc.h  iomei.h  iomusxml.h  keysig.h  layer.h  liquescent.h  midifunctor.h  nc.h  object.h  options.h  oriscus.h  quilisma.h  scoredef.h  setscoredeffunctor.h  smufl.h  staff.h  strophicus.h  syl.h  toolkit.h  toolkitdef.h  transposition.h  view.h  vrvdef.h
libmei/: pyproject.toml
libmei/addons/: att.cpp
libmei/mei/: mei-all_compiled.odd  mei-basic_compiled.odd  mei-commit.txt  mei-verovio.xml  mei-verovio_compiled.odd
libmei/tools/: cpp.py  parseschema2.py  schema.py
src/: accid.cpp  adjustaccidxfunctor.cpp  adjustbeamsfunctor.cpp  adjustdotsfunctor.cpp  adjustfloatingpositionerfunctor.cpp  adjustlayersfunctor.cpp  adjustslursfunctor.cpp  adjuststaffoverlapfunctor.cpp  adjusttupletsyfunctor.cpp  adjustxoverflowfunctor.cpp  adjustxposfunctor.cpp  alignfunctor.cpp  arpeg.cpp  beam.cpp  beamspan.cpp  boundingbox.cpp  calcalignmentpitchposfunctor.cpp  calcchordnoteheadsfunctor.cpp  calcligatureorneumeposfunctor.cpp  chord.cpp  controlelement.cpp  convertfunctor.cpp  customtuning.cpp  dir.cpp  div.cpp  doc.cpp  drawinginterface.cpp  editfunctor.cpp  editorial.cpp  editortoolkit.cpp  editortoolkit_neume.cpp  editortoolkit_shared.cpp  episema.cpp  expansionmap.cpp  facsimilefunctor.cpp  findlayerelementsfunctor.cpp  floatingobject.cpp  horizontalaligner.cpp  ioabc.cpp  iogabc.cpp  (+45 more)
src/hum/: humlib.cpp
src/midi/: MidiMessage.cpp
test/: blackwood-ex-29.mid  blackwood_15.ascl  github-4340-1.mei  github-4340-1.musicxml  github-4340-1.new.mei  github-4340-1.old.mei  github-4340-2.mei  github-4340-2.musicxml  github-4340-2.new.mei  github-4340-2.old.mei  github-4340-3.blessed.mei  github-4340-3.mei  github-4340-3.musicxml  keys-and-accidentals-advanced.mei  keys-and-accidentals-advanced.mid  keys-and-accidentals-advanced.musicxml  keys-and-accidentals-simple.mei  keys-and-accidentals-simple.mid  keys-and-accidentals-simple.musicxml  major-temperaments.mei  major-temperaments.mid  major-temperaments.musicxml  maqam-rast-without-tuning.blessed.mid  maqam-rast-without-tuning.mei  maqam-rast.blessed.mid  maqam-rast.mei  sagittal.blessed.mid  sagittal.mei  test.sh
tools/: python_metadata.py
tuning-library/include/: TuningsImpl.h
